fix contrast on submit button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,7 +164,7 @@ select {
     padding: 15px 32px;
     font-size: 100%;
     background-color:#9fdfe1 ;
-    color: #9fdfe1;
+    color: #0d293f;
 }
 #socials i {
     font-size: 200%;
